# deployer

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  deployer-spec.md  pyproject.toml
docs/: api.md  architecture.md  platform-contract.md  project-template.md  review.md  runtime-targets-v2-roadmap.md  service-catalog-plan.md  tasks.md
docs/sample-manifests/: cpucol.deployer.yml  tasktrack.deployer.yml
src/deployer/: __init__.py  api.py  catalog.py  cli.py  config.py  engine.py  errors.py  health.py  manifest.py  override.py  platform.py  project_spec.py  runner.py  server.py  state.py
src/deployer/ui/: app.js  index.html  styles.css
tests/: test_api.py  test_catalog.py  test_cli.py  test_engine.py  test_health.py  test_manifest.py  test_override.py  test_runner.py  test_server.py  test_state.py
