[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "home-paas-deployer"
version = "0.1.0"
description = "Small self-hosted deployer for a personal Docker Compose PaaS."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
deployer = "deployer.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["src/deployer"]

[tool.coverage.run]
branch = true
source = ["src/deployer"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
