[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "home-paas-deployer"
version = "0.1.0"
description = "Small self-hosted deployer for a personal Docker Compose PaaS."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "PyYAML>=6.0.1",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
deployer = "deployer.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["src/deployer"]

[tool.hatch.build.targets.wheel.force-include]
"src/deployer/ui" = "deployer/ui"

[tool.coverage.run]
branch = true
source = ["src/deployer"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
